[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/game_gui.gd" type="Script" id=1]
[ext_resource path="res://fonts/dos.fnt" type="BitmapFont" id=2]
[ext_resource path="res://sprites/btnmenuUP.png" type="Texture" id=3]
[ext_resource path="res://sprites/btnmenuDOWN.png" type="Texture" id=4]
[ext_resource path="res://scenes/game_menu.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]

resource/name = "New Anim"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label_gameover:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1, 2, 3 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Color( 1, 0, 0, 1 ), Color( 0.359375, 1, 0, 1 ), Color( 0, 0.789063, 1, 1 ), Color( 1, 0, 0, 1 ) ] }

[node name="game_gui" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Label_time" type="Label" parent="."]

anchor/left = 1
anchor/right = 1
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 216.0
margin/top = 128.0
margin/right = -270.0
margin/bottom = 218.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Time:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_time_hi" type="Label" parent="."]

anchor/left = 1
anchor/right = 1
rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 169.0
margin/top = 220.0
margin/right = -317.0
margin/bottom = 310.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0.0859375, 1, 1 )
text = "Hi: ----"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_movs_hi" type="Label" parent="."]

anchor/left = 1
anchor/right = 1
rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 169.0
margin/top = 384.0
margin/right = -317.0
margin/bottom = 474.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0.0859375, 1, 1 )
text = "Hi: ----"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_time_value" type="Label" parent="."]

anchor/left = 1
anchor/right = 1
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 216.0
margin/top = 171.0
margin/right = -270.0
margin/bottom = 261.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_movs" type="Label" parent="."]

anchor/left = 1
anchor/right = 1
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 216.0
margin/top = 291.0
margin/right = -270.0
margin/bottom = 381.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.101563, 1, 0, 1 )
text = "Movs:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_movs_value" type="Label" parent="."]

anchor/left = 1
anchor/right = 1
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 216.0
margin/top = 330.0
margin/right = -270.0
margin/bottom = 420.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureButton_options" type="TextureButton" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 71.0
margin/top = 7.0
margin/right = 7.0
margin/bottom = 71.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
params/scale = Vector2( 0.5, 0.5 )

[node name="game_menu" parent="." instance=ExtResource( 5 )]

visibility/visible = false
anchor/left = 3
anchor/right = 3
margin/left = 381.0
margin/top = 2.0
margin/right = 341.0
margin/bottom = 42.0

[node name="Label_gameover" type="Label" parent="."]

visibility/visible = false
anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 1.5, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 280.0
margin/top = 146.0
margin/right = -98.0
margin/bottom = 236.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "VICTORY"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

process/pause_mode = 2
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="pressed" from="TextureButton_options" to="." method="_on_TextureButton_options_pressed"]


